[package]
name = "aborg"
description = "A tool for handling the organization of your audiobook collection."
version = "0.1.1"
edition = "2024"
authors = ["Winter Faulk <winter@faulk.me>"]
license-file = "LICENSE"

[dependencies]
clap = {version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
handlebars = "6.3.2"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
